welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (mess = "R") {
                 ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "L") {
                        ^BDRBuggle:10: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "I") {
                        ^BDRBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "A") {
                        ^BDRBuggle:16: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "B") {
                        ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "C") {
                        ^BDRBuggle:23: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Z") {
                        ^BDRBuggle:25: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "Y") {
                        ^BDRBuggle:28: error: type mismatch;
 found   : Unit
 required: Boolean
	} else if (mess = "X") {
                        ^